{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 57,
  "lineage": "1ab6773f-1008-39c2-7ac5-09ee99f5c765",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b80402bbf8d624cb",
            "association_id": "eipassoc-0713b1fbc50096532",
            "domain": "vpc",
            "id": "eipalloc-0b80402bbf8d624cb",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-08fa41649c04f8bb4",
            "private_dns": "ip-10-0-10-190.ap-northeast-1.compute.internal",
            "private_ip": "10.0.10.190",
            "public_dns": "ec2-3-115-252-118.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.115.252.118",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098f9d67af53aceea",
            "association_id": "eipassoc-05a6ed482e28333af",
            "domain": "vpc",
            "id": "eipalloc-098f9d67af53aceea",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0af3a45a6528ccffc",
            "private_dns": "ip-10-0-11-102.ap-northeast-1.compute.internal",
            "private_ip": "10.0.11.102",
            "public_dns": "ec2-35-76-209-80.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.76.209.80",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047b45292f70baba4",
            "association_id": "eipassoc-02c1b1eba291af2b7",
            "domain": "vpc",
            "id": "eipalloc-047b45292f70baba4",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0699c03a445d04081",
            "private_dns": "ip-10-0-12-124.ap-northeast-1.compute.internal",
            "private_ip": "10.0.12.124",
            "public_dns": "ec2-54-238-0-211.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.238.0.211",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:499656329194:internet-gateway/igw-0372a710330345608",
            "id": "igw-0372a710330345608",
            "owner_id": "499656329194",
            "tags": {
              "Name": "apne1-vpc",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "vpc_id": "vpc-0a96dfb0352cf44f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b80402bbf8d624cb",
            "connectivity_type": "public",
            "id": "nat-0440da9322ffaf890",
            "network_interface_id": "eni-08fa41649c04f8bb4",
            "private_ip": "10.0.10.190",
            "public_ip": "3.115.252.118",
            "subnet_id": "subnet-02f36f2f8d7b1fb48",
            "tags": {
              "Name": "apne1-vpc-ap-northeast-1a",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc-ap-northeast-1a",
              "create_date": "2022-08-31",
              "terraform": "true"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098f9d67af53aceea",
            "connectivity_type": "public",
            "id": "nat-052f553f33980183c",
            "network_interface_id": "eni-0af3a45a6528ccffc",
            "private_ip": "10.0.11.102",
            "public_ip": "35.76.209.80",
            "subnet_id": "subnet-0d1f2b98f32504754",
            "tags": {
              "Name": "apne1-vpc-ap-northeast-1c",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc-ap-northeast-1c",
              "create_date": "2022-08-31",
              "terraform": "true"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047b45292f70baba4",
            "connectivity_type": "public",
            "id": "nat-07c803d0ce046a792",
            "network_interface_id": "eni-0699c03a445d04081",
            "private_ip": "10.0.12.124",
            "public_ip": "54.238.0.211",
            "subnet_id": "subnet-073d5679b83297902",
            "tags": {
              "Name": "apne1-vpc-ap-northeast-1d",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc-ap-northeast-1d",
              "create_date": "2022-08-31",
              "terraform": "true"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e8ec326042da11401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0440da9322ffaf890",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e8ec326042da1140",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-065cbbc6dd622bd581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-052f553f33980183c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-065cbbc6dd622bd58",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cb7fb6151b9f2b831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07c803d0ce046a792",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb7fb6151b9f2b83",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0372a710330345608",
            "id": "r-rtb-05aa1fa4f7e5545331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05aa1fa4f7e554533",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:499656329194:route-table/rtb-0e8ec326042da1140",
            "id": "rtb-0e8ec326042da1140",
            "owner_id": "499656329194",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0440da9322ffaf890",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apne1-vpc-private-ap-northeast-1a",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc-private-ap-northeast-1a",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a96dfb0352cf44f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:499656329194:route-table/rtb-065cbbc6dd622bd58",
            "id": "rtb-065cbbc6dd622bd58",
            "owner_id": "499656329194",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-052f553f33980183c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apne1-vpc-private-ap-northeast-1c",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc-private-ap-northeast-1c",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a96dfb0352cf44f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:499656329194:route-table/rtb-0cb7fb6151b9f2b83",
            "id": "rtb-0cb7fb6151b9f2b83",
            "owner_id": "499656329194",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07c803d0ce046a792",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apne1-vpc-private-ap-northeast-1d",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc-private-ap-northeast-1d",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a96dfb0352cf44f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:499656329194:route-table/rtb-05aa1fa4f7e554533",
            "id": "rtb-05aa1fa4f7e554533",
            "owner_id": "499656329194",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0372a710330345608",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apne1-vpc-public",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc-public",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a96dfb0352cf44f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e40be1e1f41bbc8",
            "route_table_id": "rtb-0e8ec326042da1140",
            "subnet_id": "subnet-0250f0a7b88329bc9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab1f1fb836c7711f",
            "route_table_id": "rtb-065cbbc6dd622bd58",
            "subnet_id": "subnet-0bf3fc4b9e4da01ff"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0867afe7731a06733",
            "route_table_id": "rtb-0cb7fb6151b9f2b83",
            "subnet_id": "subnet-0c94e8a4dce9dbebe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e523b4e46337c589",
            "route_table_id": "rtb-0e8ec326042da1140",
            "subnet_id": "subnet-0ef20b9c7e8092993"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036c50947a834d32a",
            "route_table_id": "rtb-065cbbc6dd622bd58",
            "subnet_id": "subnet-05eed3aa143fe201b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a883b71d6692b30",
            "route_table_id": "rtb-0cb7fb6151b9f2b83",
            "subnet_id": "subnet-0071195a56e2d5467"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9ad1c78b43a6e88",
            "route_table_id": "rtb-05aa1fa4f7e554533",
            "subnet_id": "subnet-02f36f2f8d7b1fb48"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ffe212729a9f4c3",
            "route_table_id": "rtb-05aa1fa4f7e554533",
            "subnet_id": "subnet-0d1f2b98f32504754"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f83c943081d44d1",
            "route_table_id": "rtb-05aa1fa4f7e554533",
            "subnet_id": "subnet-073d5679b83297902"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:499656329194:subnet/subnet-0250f0a7b88329bc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0250f0a7b88329bc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "499656329194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apne1-vpc-db-ap-northeast-1a",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc-db-ap-northeast-1a",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "vpc_id": "vpc-0a96dfb0352cf44f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:499656329194:subnet/subnet-0bf3fc4b9e4da01ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf3fc4b9e4da01ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "499656329194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apne1-vpc-db-ap-northeast-1c",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc-db-ap-northeast-1c",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "vpc_id": "vpc-0a96dfb0352cf44f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:499656329194:subnet/subnet-0c94e8a4dce9dbebe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c94e8a4dce9dbebe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "499656329194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apne1-vpc-db-ap-northeast-1d",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc-db-ap-northeast-1d",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "vpc_id": "vpc-0a96dfb0352cf44f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:499656329194:subnet/subnet-0ef20b9c7e8092993",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef20b9c7e8092993",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "499656329194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apne1-vpc-private-ap-northeast-1a",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc-private-ap-northeast-1a",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "vpc_id": "vpc-0a96dfb0352cf44f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:499656329194:subnet/subnet-05eed3aa143fe201b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05eed3aa143fe201b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "499656329194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apne1-vpc-private-ap-northeast-1c",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc-private-ap-northeast-1c",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "vpc_id": "vpc-0a96dfb0352cf44f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:499656329194:subnet/subnet-0071195a56e2d5467",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0071195a56e2d5467",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "499656329194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apne1-vpc-private-ap-northeast-1d",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc-private-ap-northeast-1d",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "vpc_id": "vpc-0a96dfb0352cf44f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:499656329194:subnet/subnet-02f36f2f8d7b1fb48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f36f2f8d7b1fb48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499656329194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apne1-vpc-public-ap-northeast-1a",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc-public-ap-northeast-1a",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "vpc_id": "vpc-0a96dfb0352cf44f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:499656329194:subnet/subnet-0d1f2b98f32504754",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1f2b98f32504754",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499656329194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apne1-vpc-public-ap-northeast-1c",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc-public-ap-northeast-1c",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "vpc_id": "vpc-0a96dfb0352cf44f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:499656329194:subnet/subnet-073d5679b83297902",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073d5679b83297902",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499656329194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apne1-vpc-public-ap-northeast-1d",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc-public-ap-northeast-1d",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "vpc_id": "vpc-0a96dfb0352cf44f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:499656329194:vpc/vpc-0a96dfb0352cf44f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed948c756f5ea161",
            "default_route_table_id": "rtb-099f1e0135288788d",
            "default_security_group_id": "sg-023942dc2ea61b62d",
            "dhcp_options_id": "dopt-12f3e775",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a96dfb0352cf44f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-099f1e0135288788d",
            "owner_id": "499656329194",
            "tags": {
              "Name": "apne1-vpc",
              "create_date": "2022-08-31",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "apne1-vpc",
              "create_date": "2022-08-31",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}